[project]
name = "pharma-sales"
version = "0.1.0"
description = ""
authors = [
    {name = "chfrchko5",email = "r4ger7@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
